package edu.hitsz.template;

import edu.hitsz.application.Game;

public class EasyGame  extends Game {
    public EasyGame() {
        super();
    }

    public void changeDifficulty() {

    }
}
